[project]
name = "record-matching-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "vectorlink-gpu",
    "vectorlink-py",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
hello = 'record_matching_example.main:main'

[tool.uv.sources]
vectorlink-gpu = { git = "ssh://git@github.com/vectorlink-ai/vectorlink-gpu" }
vectorlink-py = { git = "ssh://git@github.com/vectorlink-ai/vectorlink.py" }
