[project]
name = "record-matching-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "scipy>=1.15.1",
    "vectorlink-gpu",
    "vectorlink-py",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
match-records = 'record_matching_example.match_records:main'
ingest-csv = 'record_matching_example.match_records:ingest_csv'
template-records = 'record_matching_example.match_records:template_records'
dedup = 'record_matching_example.match_records:dedup_records'
vectorize = 'record_matching_example.match_records:vectorize_records'
average = 'record_matching_example.match_records:average_fields'
build-index-map = 'record_matching_example.match_records:build_index_map'
index-field = 'record_matching_example.match_records:index_field'
load-ann = 'record_matching_example.match_records:load_ann'
discover-training-set = 'record_matching_example.match_records:discover_training_set'
search = 'record_matching_example.match_records:search'

[tool.uv.sources]
vectorlink-gpu = { git = "ssh://git@github.com/vectorlink-ai/vectorlink-gpu" }
vectorlink-py = { git = "ssh://git@github.com/vectorlink-ai/vectorlink.py" }
